2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/lxm3200m.xml, driver/lxm3200c.xml, driver/lxm3200p.xml,
	  driver/lxm3200X.xml, driver/lxm3200.xml, opt/2.xml, opt/45.xml,
	  printer/Xerox-WorkCentre_XK35c.xml: Cleaned up driver entries
	  for old "lxm3200m"/"lxm3200c"/"lxm3200p" drivers. As they are
	  actually one driver they only need one driver entry ("lxm3200X").

	* printer/Tektronix-4693d_color_printer_2-bit_mode.xml,
	  printer/Tektronix-4693d_color_printer_4-bit_mode.xml,
	  printer/Tektronix-3693d_color_printer_8-bit_mode.xml,
	  printer/Tektronix-4693d.xml, db/oldprinterids,
	  db/source/driver/t4693d2.xml, db/source/driver/t4693d4.xml,
	  db/source/driver/t4693d8.xml, db/source/driver/t4693dX.xml,
	  opt/80.xml, opt/126.xml: Cleaned up support for the
	  Tektronix 4693d. Created one printer entry for this one printer
	  and one driver entry for its Ghostscript driver.

	* driver/hpdj.xml: Updated URL.

	* driver/ras1.upp.xml, driver/ras24.upp.xml, driver/ras3.upp.xml,
	  driver/ras32.upp.xml, driver/ras4.upp.xml, driver/ras8m.upp.xml:
	  Removed Sun Raster .upp files. This is not a printer driver.

	* driver/PM760pl.upp.xml, driver/PM820pl.upp.xml,
	  driver/Stc670pl.upp.xml, driver/Stc680pl.upp.xml,
	  driver/Stc760pl.upp.xml, driver/Stc777pl.upp.xml,
	  driver/Stp720pl.upp.xml, driver/Stp870pl.upp.xml,
	  driver/bj8gc12f.upp.xml, driver/bj8hg12f.upp.xml,
	  driver/bj8oh06n.upp.xml, driver/bj8pp12f.upp.xml,
	  driver/bj8ts06n.upp.xml, driver/bjc6000b1.upp.xml,
	  driver/bjc610a1.upp.xml, driver/bjc610a2.upp.xml,
	  driver/bjc610a3.upp.xml, driver/bjc610a4.upp.xml,
	  driver/bjc610a5.upp.xml, driver/bjc610a6.upp.xml,
	  driver/bjc610a7.upp.xml, driver/bjc610a8.upp.xml,
	  driver/bjc610b1.upp.xml, driver/bjc610b2.upp.xml,
	  driver/bjc610b3.upp.xml, driver/bjc610b4.upp.xml,
	  driver/bjc610b6.upp.xml, driver/bjc610b7.upp.xml,
	  driver/bjc610b8.upp.xml, driver/necp2x6.upp.xml,
	  driver/s400b1.upp.xml, driver/st640ihg.upp.xml,