@@ -8,22 +8,25 @@
   </execution>
   <comments>
     <en>
-    The printing system/execution information for this driver serves
-    also for the lj5mono driver.&lt;p&gt;
 
-    PCL-XL driver for the LaserJet 5, 6 (not 5L and 5P) and compatible
-    models up to 1200 dpi resolution. Note that the
-    &quot;pxlmono&quot;/&quot;pxlcolor&quot; drivers are much faster
-    than this driver, but due to a bug they do not work in Ghostscript
-    5.50, in Ghostscript 6.51 they work excellently. &quot;ljet4&quot;
-    is also much faster, but has a much worse output quality and on
-    many printers it only does 600 dpi.&lt;p&gt;
+      The printing system/execution information for this driver serves
+      also for the "lj5mono" output device of Ghostscript.&lt;p&gt;
 
-    The resolution must be given with the &quot;-r&quot; option on the
-    command line of Ghostscript. Preceeding the PostScript file by a
-    PostScript command for setting the resolution does not work (at
-    least not for 1200 dpi).
-  </en>
+      PCL-XL driver for the LaserJet 5, 6 (not 5L and 5P) and
+      compatible models up to 1200 dpi resolution. Note that the
+      &quot;pxlmono&quot;/&quot;pxlcolor&quot; drivers are much faster
+      than this driver, but due to a bug they do not work in
+      Ghostscript 5.50, in Ghostscript 6.51 they work
+      excellently. &quot;ljet4&quot; is also much faster, but has a
+      much worse output quality and on most printers it only does 600
+      dpi.&lt;p&gt;
+
+      The resolution must be given with the &quot;-r&quot; option on
+      the command line of Ghostscript. Preceeding the PostScript file
+      by a PostScript command for setting the resolution does not work
+      (at least not for 1200 dpi).&lt;p&gt;
+
+    </en>
   </comments>
   <printers>
     <printer>
@@ -420,10 +423,12 @@
       <id>printer/Xerox-DocuPrint_P1202</id>
       <comments>
         <en>
-    This driver supports the native grayscales of this printer but a
-    little annoyance is that the whole page is overlayed with a very
-    light grayscale
-    </en>
+
+          This driver supports the native grayscales of this printer
+          but a little annoyance is that the whole page is overlayed
+          with a very light grayscale.
+
+	</en>
       </comments>
     </printer>
   </printers>
