@@ -1,406 +1,0 @@
-<driver id="driver/lj5mono">
-  <name>lj5mono</name>
-  <url>http://www.ghostscript.com/</url>
-  <thirdpartysupplied />
-  <execution>
-    <ghostscript />
-  </execution>
-  <comments>
-    <en>See lj5gray for more information.</en>
-  </comments>
-  <printers>
-    <printer>
-      <id>printer/Brother-DCP-8045D</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1250</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1270N</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1450</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1470N</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1650</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1660e</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1670N</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1850</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-1870N</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-2060</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-2140</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-2400CeN</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-2460</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-2460N</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-2600CN</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-3400CN</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-3450CN</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-4000CN</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5030</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5040</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5050</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5070N</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5140</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5150D</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-5170DN</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-7050</id>
-    </printer>
-    <printer>
-      <id>printer/Brother-HL-7050N</id>
-    </printer>
-    <printer>
-      <id>printer/Canon-LBP-1000</id>
-    </printer>
-    <printer>
-      <id>printer/Canon-LBP-1760</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-AcuLaser_C2000</id>
-      <comments>
-        <en>Grayscale only.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/Epson-AcuLaser_C2000PS</id>
-      <comments>
-        <en>Grayscale only.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/Epson-AcuLaser_C8500</id>
-      <comments>
-        <en>Grayscale only.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/Epson-AcuLaser_C8500PS</id>
-      <comments>
-        <en>Grayscale only.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/Epson-AcuLaser_C8600</id>
-      <comments>
-        <en>Grayscale only.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/Epson-AcuLaser_C8600PS</id>
-      <comments>
-        <en>Grayscale only.</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-5800</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-5800PS</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-5900</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-5900PS</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-6100</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-6100PS</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2050</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2050plus</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2050PS</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2050PSplus</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2120</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2500</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2500PS</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2750</id>
-    </printer>
-    <printer>
-      <id>printer/Epson-EPL-N2750PS</id>
-    </printer>
-    <printer>
-      <id>printer/Fujitsu-PrintPartner_20W</id>
-    </printer>
-    <printer>
-      <id>printer/Generic-PCL_6_PCL_XL_Printer</id>
-    </printer>
-    <printer>
-      <id>printer/HP-Color_LaserJet_4550</id>
-    </printer>
-    <printer>
-      <id>printer/HP-Color_LaserJet_4600</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_1200</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_1220</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_1300</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_2100</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_2100M</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_2200</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_2300</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3200</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3200m</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3200se</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3300_MFP</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3310_MFP</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3320N_MFP</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3320_MFP</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_3330_MFP</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_4000</id>
-      <comments>
-        <en>Should work up to 1200 dpi</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_4050</id>
-      <comments>
-        <en>to 1200dpi</en>
-      </comments>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_4100</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_5</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_5Si</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_6</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_8150</id>
-    </printer>
-    <printer>
-      <id>printer/HP-LaserJet_9000</id>
-    </printer>
-    <printer>
-      <id>printer/IBM-Infoprint_12</id>
-    </printer>
-    <printer>
-      <id>printer/Infotec-4651_MF</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1000</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1000plus</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1010</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1050</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1200</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1700plus</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1750</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1800</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1800plus</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-1900</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-3700plus</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-3750</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-3800</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-6700</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-7000plus</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-9000</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-9100DN</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-FS-9500DN</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-1530</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-1810</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-2030</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-2530</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-3530</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-4230</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-4530</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-5230</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-5530</id>
-    </printer>
-    <printer>
-      <id>printer/Kyocera-KM-6230</id>
-    </printer>
-    <printer>
-      <id>printer/Oki-Okipage_10ex</id>
-    </printer>
-    <printer>
-      <id>printer/Oki-Okipage_14ex</id>
-    </printer>
-    <printer>
-      <id>printer/Ricoh-Aficio_220</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-1250</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-1650</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-1651N</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-4600</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-7000</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-7000N</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-7000P</id>
-    </printer>
-    <printer>
-      <id>printer/Samsung-ML-7050</id>
-    </printer>
-    <printer>
-      <id>printer/Sharp-AR-161</id>
-    </printer>
-    <printer>
-      <id>printer/Xerox-DocuPrint_N4512</id>
-    </printer>
-    <printer>
-      <id>printer/Xerox-DocuPrint_N4512PS</id>
-    </printer>
-    <printer>
-      <id>printer/Xerox-DocuPrint_P1202</id>
-    </printer>
-  </printers>
-</driver>
