@@ -83,7 +83,7 @@
 
     Note that many printers listed as supported by this driver also
     understand PCL-XL and so they can be used with the
-    &quot;lj5gray&quot;/&quot;lj5mono&quot; and
+    &quot;lj5gray&quot; and
     &quot;pxlmono&quot;/&quot;pxlcolor&quot; drivers which give a much
     higher output quality and resolutions up to 1200 dpi,&lt;p&gt;
 
