@@ -12,7 +12,7 @@
   <comments>
     <en>
     Driver for color PCL 6 printers, much faster than the
-    &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers.&lt;p&gt;
+    &quot;lj5gray&quot; drivers.&lt;p&gt;
 
     The &quot;pxlmono&quot; and the &quot;pxlcolor&quot; driver are the same code, the
     difference is only that the &quot;pxlcolor&quot; gives colour and the
