@@ -17,10 +17,6 @@
       <driver>lj5gray</driver>
       <arg_defval>ev/881</arg_defval>
     </constraint>
-    <constraint sense="true">
-      <driver>lj5mono</driver>
-      <arg_defval>ev/882</arg_defval>
-    </constraint>
   </constraints>
   <enum_vals>
     <enum_val id="ev/881">
