@@ -26,10 +26,6 @@
       <arg_defval>ev/890</arg_defval>
     </constraint>
     <constraint sense="true">
-      <driver>lj5mono</driver>
-      <arg_defval>ev/890</arg_defval>
-    </constraint>
-    <constraint sense="true">
       <driver>pcl3</driver>
       <arg_defval>ev/889</arg_defval>
     </constraint>
@@ -84,9 +80,6 @@
           <driver>lj5gray</driver>
         </constraint>
         <constraint sense="false">
-          <driver>lj5mono</driver>
-        </constraint>
-        <constraint sense="false">
           <driver>pcl3</driver>
           <printer>printer/Sharp-AJ-1800</printer>
         </constraint>
@@ -129,9 +122,6 @@
         </constraint>
         <constraint sense="false">
           <driver>lj5gray</driver>
-        </constraint>
-        <constraint sense="false">
-          <driver>lj5mono</driver>
         </constraint>
         <constraint sense="false">
           <driver>pcl3</driver>
@@ -245,9 +235,6 @@
         </constraint>
         <constraint sense="false">
           <driver>lj5gray</driver>
-        </constraint>
-        <constraint sense="false">
-          <driver>lj5mono</driver>
         </constraint>
         <constraint sense="false">
           <driver>pcl3</driver>
