@@ -226,10 +226,6 @@
       <arg_defval>ev/1</arg_defval>
     </constraint>
     <constraint sense="true">
-      <driver>lj5mono</driver>
-      <arg_defval>ev/1</arg_defval>
-    </constraint>
-    <constraint sense="true">
       <driver>ljet2p</driver>
       <arg_defval>ev/1</arg_defval>
     </constraint>
