@@ -82,7 +82,7 @@
       <id>lj4dith</id>
     </driver>
     <driver>
-      <id>lj5mono</id>
+      <id>lj5gray</id>
     </driver>
     <driver>
       <id>ljet4</id>
