@@ -19,14 +19,24 @@
   <functionality>A</functionality>
   <driver>pxlmono</driver>
   <comments>
-    <en>Works fine, although I have only tried it up to 600x600 on A4.
-&lt;br&gt;Comes with 4MB of RAM; more memory is probably needed for 1200dpi output.
-&lt;br&gt;I have no confirmed report as yet of 1200dpi working, but given enough
-memory it ought to.&lt;p&gt;
+    <en>
 
-I have tested an LBP-1000 which does 1200dpi with the ljet4, lj5gray, lj5mono,
-and the pxlmono drivers. With enough memory the LBP-1760 probably does it, too.&lt;p&gt;
+      Works fine, although I have only tried it up to 600x600dpi on
+      A4.&lt;br&gt;
 
-      Consumables/Refills: Toner Cartridge. Price about 99 Irish Pounds&lt;p&gt;</en>
+      Comes with 4MB of RAM; more memory is probably needed for
+      1200dpi output.&lt;br&gt;
+
+      I have no confirmed report as yet of 1200dpi working, but given
+      enough memory it ought to.&lt;p&gt;
+
+      I have tested an LBP-1000 which does 1200dpi with the ljet4,
+      lj5gray, and the pxlmono drivers. With enough memory the
+      LBP-1760 probably does it, too.&lt;p&gt;
+
+      Consumables/Refills: Toner Cartridge. Price about 99 Irish
+      Pounds&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
