@@ -53,7 +53,7 @@
     OpenPrinting that the HP LaserJet 1010 works for him with all
     raster drivers for the HP LaserJet 1100 (HPLIP,
     &quot;ljet4&quot;, &quot;lj4dith&quot;, &quot;gimp-print&quot;). Adam tried also PCL-6 drivers
-    (&quot;lj5gray&quot;/&quot;lj5mono&quot;, &quot;pxlmono&quot;) but without success.&lt;p&gt;
+    (&quot;lj5gray&quot;, &quot;pxlmono&quot;) but without success.&lt;p&gt;
 
     Unfortunately, the new LaserJet 1010/1012 series seems not to
     be absolutely compatible with older HP printers or it has a
