@@ -51,7 +51,7 @@
     Remember that the 5L is more like the LaserJet 4 family than the
     LaserJet 5 family (as with most &quot;L&quot; printers from
     HP). For example it does not work with the
-    &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers but only with the
+    &quot;lj5gray&quot; drivers but only with the
     &quot;ljet4&quot; or &quot;lj4dith&quot; drivers (and
     Gimp-Print or HPIJS).&lt;p&gt;
 
