@@ -38,7 +38,7 @@
     HPLIP driver&lt;/a&gt; (which includes HPIJS). &lt;p&gt;
 
     Reported not to work with the
-    &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers, use the
+    &quot;lj5gray&quot; drivers, use the
     &quot;ljet4&quot; or &quot;lj4dith&quot; drivers (or Gimp-Print or
     HPIJS) instead.&lt;p&gt;
 
