@@ -39,7 +39,7 @@
     Remember that the 6L is more like the LaserJet 4 family than the
     LaserJet 6 family (as with most &quot;L&quot; printers from
     HP). For example it does not work with the
-    &quot;lj5gray&quot;/&quot;lj5mono&quot; drivers but only with the
+    &quot;lj5gray&quot; drivers but only with the
     &quot;ljet4&quot; or &quot;lj4dith&quot; drivers (and
     also Gimp-Print and HPIJS).&lt;p&gt;
 
