@@ -1,5 +1,15 @@
 2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* driver/lj5mono.xml, driver/lj5gray.xml, driver/ljet4.xml,
+	  driver/pxlcolor.xml, driver/pxlmono.xml, opt/149.xml, opt/159.xml,
+	  opt/2.xml, printer/Brother-HL-2030.xml,
+	  printer/Brother-HL-2035.xml, printer/Canon-LBP-1760.xml,
+	  printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
+	  printer/HP-LaserJet_5L.xml, printer/HP-LaserJet_5P.xml,
+	  printer/HP-LaserJet_6L.xml: Removed "lj5mono" driver entry,
+	  the "lj5mono" output device of Ghostscript is already covered
+	  by the "lj5gray" driver entry.
+
 	* driver/lxm3200m.xml, driver/lxm3200c.xml, driver/lxm3200p.xml,
 	  driver/lxm3200X.xml, driver/lxm3200.xml, opt/2.xml, opt/45.xml,
 	  printer/Xerox-WorkCentre_XK35c.xml: Cleaned up driver entries
@@ -10,8 +20,8 @@
 	  printer/Tektronix-4693d_color_printer_4-bit_mode.xml,
 	  printer/Tektronix-3693d_color_printer_8-bit_mode.xml,
 	  printer/Tektronix-4693d.xml, db/oldprinterids,
-	  db/source/driver/t4693d2.xml, db/source/driver/t4693d4.xml,
-	  db/source/driver/t4693d8.xml, db/source/driver/t4693dX.xml,
+	  driver/t4693d2.xml, driver/t4693d4.xml,
+	  driver/t4693d8.xml, driver/t4693dX.xml,
 	  opt/80.xml, opt/126.xml: Cleaned up support for the
 	  Tektronix 4693d. Created one printer entry for this one printer
 	  and one driver entry for its Ghostscript driver.
